# foundry-iptv

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  mutagen.yml  next.config.ts  package-lock.json  package.json
clients/: .gitignore  Cargo.toml  README.md
clients/foundry-android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
clients/foundry-android/app/: build.gradle.kts
clients/foundry-android/app/src/main/: AndroidManifest.xml
clients/foundry-android/app/src/main/java/com/foundry/iptv/: FoundryCore.kt  MainActivity.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/core/: foundry_core.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/player/: ExoPlayerScreen.kt  NowPlayingOverlay.kt  PlayerHost.kt  StreamKind.kt  WarmPlayerPool.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/: ChannelList.kt  Pairing.kt  WebViewScreen.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/common/: ApiClientHolder.kt  ChannelPicker.kt  EmptyLibraryState.kt  LibraryStore.kt  WatchTracker.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/decks/: DeckApiShim.kt  DeckListScreen.kt  DeckScreen.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/favorites/: FavoritesScreen.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/focus/: FocusHelpers.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/guide/: GuideScreen.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/history/: HistoryScreen.kt  HistoryStore.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/hub/: ComingSoonScreen.kt  FoundryHub.kt  HubSection.kt  TabRail.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/image/: ChannelLogo.kt  FoundryImageLoader.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/lists/: ListsScreen.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/live/: ApiClientFactory.kt  LiveScreen.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/multiview/: MultiviewApiShim.kt  MultiviewScreen.kt  _WarmPoolShim.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/nowplaying/: NowPlayingDeck.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/search/: SearchScreen.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/series/: SeriesCredentials.kt  SeriesDetailScreen.kt  SeriesPoster.kt  SeriesScreen.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/settings/: SettingsScreen.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/theme/: Color.kt  FoundryTheme.kt  Typography.kt
clients/foundry-android/app/src/main/java/com/foundry/iptv/ui/vod/: VodCredentials.kt  VodDetailScreen.kt  VodPoster.kt  VodScreen.kt
clients/foundry-android/app/src/main/res/values/: strings.xml  themes.xml
clients/foundry-android/jniLibs/: README.md
clients/foundry-core/: Cargo.toml  build.rs  uniffi.toml
clients/foundry-core/src/: api.rs  auth.rs  config.rs  epg.rs  error.rs  ffi.rs  foundry-core.udl  foundry_core.udl  keymap.rs  lib.rs  models.rs  state.rs  stream.rs
clients/foundry-core/tests/: api_tests.rs  smoke.rs
clients/foundry-tv/: Cargo.toml  README.md
clients/foundry-tv/src/: main.rs
clients/foundry-tv/ui/: app.slint
deploy/: Caddyfile  README.md  install.sh
docs/: provider-caps.md  provider-vetting.md  security-threat-model.md
iso/: .gitignore  build.sh
public/: sw.js  (+1 more)
(+195 files in other folders)
