[package]
name = "foundry-core"
description = "Shared Rust core for Foundry IPTV clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# Enable uniffi bindings generation for the Kotlin/Android shell.
uniffi = ["dep:uniffi"]

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true
toml.workspace = true
uniffi = { version = "0.28", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock.workspace = true
