[package]
name = "foundry-tv"
description = "Linux streaming-PC client for Foundry IPTV (Slint UI + GStreamer)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "foundry-tv"
path = "src/main.rs"

[dependencies]
foundry-core = { path = "../foundry-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
slint = "1.8"
gstreamer = "0.23"
gstreamer-app = "0.23"
ctrlc = "3"

[build-dependencies]
slint-build = "1.8"
